--- a/wasipage.html
+++ b/wasipage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WASI TECH BOT </title>
+  <title>SHABAN MD BOT </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -127,17 +127,17 @@
 </head>
 <body>
   <div style="text-align: center; margin-bottom: 20px; color: #666;">
-    <div style="font-weight: bold; animation: float 3s ease-in-out infinite; text-shadow: 2px 2px 4px rgba(0,0,0,0.2);">Created by Mr Wasi Dev</div>
+    <div style="font-weight: bold; animation: float 3s ease-in-out infinite; text-shadow: 2px 2px 4px rgba(0,0,0,0.2);">Created by Mr Shaban Dev</div>
   </div>
 
-  <button onclick="window.open(`/wasiqr`)" class="btn">QR Code</button>
+  <button onclick="window.open(`/shabanqr`)" class="btn">QR Code</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
-  <button onclick="window.open(`https://github.com/Itxxwasi/WASI-MD-V`)" class="btn">Bot Repo</button>
+  <button onclick="window.open(`https://github.com/shaban282/SHABAN-MD`)" class="btn">Bot Repo</button>
   <button onclick="window.open(`https://github.com/wasixd/WASI-MD-PLUGINS`)" class="btn">Plugins</button>
-  <button onclick="window.open(`https://wa.me/923192173398`)" class="btn">Contact Me</button>
-  <button onclick="window.open(`https://chat.whatsapp.com/L14FfkAgFCN9eXGe5Sqjqt`)" class="btn">Wa Group</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VaDK8ZUDjiOhwFS1cP2j`)" class="btn">Wa Channel</button>
+  <button onclick="window.open(`https://wa.me/923059395959`)" class="btn">Contact Me</button>
+  <button onclick="window.open(`https://wa.me/message/L5NHEHHAQUQZF1`)" class="btn">Wa Group</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VazjYjoDDmFZTZ9Ech3O`)" class="btn">Wa Channel</button>
   <button onclick="window.open(`https://instagram.com/itx_mee_wasi`)" class="btn">Instagram</button>
-  <button onclick="window.open(`https://youtube.com/@wasitech1`)" class="btn">Youtube</button>
+  <button onclick="window.open(`https://youtube.com/@mrshaban3788?si=GYPwbIg4mxUdtsou`)" class="btn">Youtube</button>
 </body>
 </html>
